# tls_shard

./: .gitignore  CMakeLists.txt  shard.cppm  shard_retain.cppm  tls.cppm  vc140.idb
unittest/: CMakeLists.txt  test_shard.cpp
